# Customer-Support-Ticket-Processor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  main.py  pyproject.toml
data/: eval_tickets.json
data/billing_docs/: invoice_guide.md  refund_policy.md  subscription_management.md
data/general_docs/: company_info.md  policies.md  product_overview.md
data/technical_docs/: api_reference.md  error_codes.md  troubleshooting.md
scripts/: load_documents.py  run_eval.py
src/: agents.py  checkpointer.py  classifier.py  confidence_gate.py  graph.py  models.py  quality_check.py  quality_gate.py  state.py  vector_store.py
src/tools/: __init__.py  calculator.py  code_analysis.py  search.py
tests/: conftest.py  test_agents.py  test_api.py  test_classifier.py  test_confidence_gate.py  test_eval.py  test_graph.py  test_models.py  test_quality_check.py  test_quality_gate.py  test_state.py  test_tools.py  test_vector_store.py
