[project]
name = "customer-support-ticket-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.0",
    "langgraph-checkpoint-redis>=0.3.9",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "redis>=7.1.1",
    "sentence-transformers>=5.2.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
